[package]
name = "ragnarok"
version = "0.4.8"
edition = "2021"
authors = ["Matteo Possami (circled-square)"]
publish = ["kellnr"]

[dependencies]
glium = {  version = "0.32.1", features = ["glutin"] }
glutin = {  version = "0.31.3" }
glutin-winit = "0.2.2"
imgui = "0.11.0"
imgui-glium-renderer = "0.11.0"
imgui-winit-support = "0.11.0"
winit = "0.27.5"

nalgebra-glm = "0.18.0"
rand = {  version = "0.8.5", features = ["small_rng"] }
num-traits = "0.2.18"
range-set = "0.0.11"

robotics_lib = { version = "0.1.21", registry = "kellnr" }
strum = "0.25.0"

[dev-dependencies]
rip_worldgenerator = { version = "0.5.57", registry = "kellnr" }
midgard = { path="../midgard" }

